# Deep-Lynx

./: .credo.exs  .docker-env  .dockerignore  .env-sample  .eslintignore  .eslintrc.js  .formatter.exs  .gitignore  .gitlab-ci.yml  .prettierignore  .sobelow-conf  .tool-versions  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  NOTICE.txt  README.md  cargo.toml  docker-compose.local.yml  docker-compose.yml  ecosystem.config.js  getting_started.md  mix.exs  nodemon.json  package-lock.json  package.json  pre-push  public-key.pem  queue_worker.config.js  readme.md  requirements.txt  supervisord.conf  tsconfig.json  tslint.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
API Documentation/: Core.postman_collection.json  Core.swagger_collection.json  Core.swagger_collection.yaml
Admin Web App/: .env-sample  Dockerfile  package-lock.json  package.json  vue.config.js
AdminWebApp/: .env-sample  .eslintrc.js  package-lock.json  package.json  tsconfig.json  vue.config.js
NodeLibraries/deeplynx/: Cargo.toml  index.d.ts  index.js  package.json
NodeLibraries/deeplynx-timeseries/: .config.yml  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
NodeLibraries/deeplynx-timeseries/__test__/: index.spec.mjs
NodeLibraries/deeplynx-timeseries/npm/darwin-arm64/: README.md  package.json
NodeLibraries/deeplynx-timeseries/npm/darwin-x64/: README.md  package.json
NodeLibraries/deeplynx-timeseries/npm/linux-arm64-musl/: README.md  package.json
NodeLibraries/deeplynx-timeseries/npm/linux-x64-gnu/: README.md  package.json
NodeLibraries/deeplynx-timeseries/npm/linux-x64-musl/: README.md  package.json
NodeLibraries/deeplynx-timeseries/npm/win32-x64-msvc/: README.md  package.json
NodeLibraries/deeplynx-timeseries/src/: config.rs  data_types.rs  errors.rs  ingestion.rs  lib.rs  tests.rs
NodeLibraries/deeplynx/src/: config.rs  errors.rs  lib.rs  redis_graph.rs  shape_hasher.rs  timeseries.rs
NodeLibraries/deeplynx/src/redis_graph/: loader.rs  redis_errors.rs  redis_tests.rs
NodeLibraries/deeplynx/src/shape_hasher/: shapehasher_errors.rs  shapehasher_tests.rs
NodeLibraries/deeplynx/src/timeseries/: data_types.rs  ingestion.rs  repository.rs  timeseries_errors.rs  timeseries_tests.rs
NodeLibraries/deeplynx/test_files/: complexValueNodeTester.json  inference.csv
NodeLibraries/dl-fast-load/: .gitignore  Cargo.toml  README.md  index.node  package-lock.json  package.json
NodeLibraries/dl-fast-load/src/: lib.rs
RedisLoader/: Cargo.toml  Dockerfile
RedisLoader/src/: errors.rs  main.rs
WebGLViewer/: .gitignore  index.html  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
adr/: 000_adr.md  001_ai_infra.md  002_origin_search_method.md  003_mult_tenancy.md  004_duckdb_timeseries.md  005_no_more_burrito.md
api_documentation/: Core.postman_collection.json  Core.swagger_collection.json
assets/: package-lock.json  package.json  tailwind.config.js
chart/: CONTRIBUTING.md  Chart.yaml  README.md  helm-refresh.sh  nginx-values.yaml  values.yaml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
documentation/: Core.swagger_collection.yaml
interactive_documentation/: globals.html  index.html
kubernetes/: acceptance.yml  development.yml  production.yml
lib/: datum.ex  datum_web.ex
migrations/: 001_containers_basic_meta.sql  005_importers.sql  006_data_type_mapping.sql  009_type_mapping_scheduled_function.sql  011_active_graphs_change.sql  013_unpack_import_row.sql  016_not_null_user_constraint.sql  017_keypairs.sql  018_files.sql  019_files.sql  019_mapping_relationship_pair.sql  020_CORRECTION_dropping_unique_relationship_keys.sql  021_CORRECTION_dropping_unique_relationship_keys.sql  023_metatypekeys_metatyperelationship_keys.sql  024_nodes_edges_import.sql  025_unpack_rows_remove.sql  027_user_reset.sql  028_container_delete.sql  029_user_container_invite.sql  030_oauth_applications.sql  (+6 more)
native/hdf5_extractor/: Cargo.toml  config.toml  readme.md
native/hdf5_extractor/files/: structure.h5  structure_sample.json
native/hdf5_extractor/src/: hdf5_extractor.rs  lib.rs
plugins/extractors/csv_extractor/: Cargo.toml
priv/: tester.py  (+1 more)
server/NodeLibraries/deeplynx/: .config.yml  Cargo.toml  index.d.ts  index.js  package.json
server/NodeLibraries/deeplynx/src/: config.rs  errors.rs  lib.rs  redis_graph.rs  shape_hasher.rs  snapshot.rs  timeseries.rs  timeseries2.rs
server/NodeLibraries/deeplynx/src/redis_graph/: loader.rs  redis_tests.rs
server/NodeLibraries/deeplynx/src/shape_hasher/: shapehasher_tests.rs
server/NodeLibraries/deeplynx/src/snapshot/: errors.rs  generator.rs  snapshot_tests.rs
server/NodeLibraries/deeplynx/src/timeseries/: azure_object_store.rs  bucket_repository.rs  data_types.rs  datafusion_session.rs  errors.rs  file_metadata.rs  ingestion.rs  query.rs  repository.rs  tests.rs  timeseries_errors.rs  timeseries_tests.rs
server/NodeLibraries/deeplynx/src/timeseries2/: api.rs  azure_metadata.rs  azure_object_store.rs  cli.rs  error.rs  errors.rs  file_metadata.rs  file_path_metadata.rs  hdf5.rs  hdf5_main.rs  integration.rs  lib.rs  logger.rs  publisher.rs  request.rs  response.rs  session.rs  subscriber.rs  temp_file.rs  time_series_query.rs  timeseries_query.rs  types.rs
server/NodeLibraries/deeplynx/test_files/: multipleObjectArrayTest.json  multipleSameSimplifierTest.json  sparse_legacy.csv  valueNodeTester.json
server/NodeLibraries/deeplynx/test_files/shape_hasher/: dataTypeTest.json  nestedArrayTest.json  simpleTest.json  stopNodeTester.json
server/NodeLibraries/deeplynx/test_files/timeseries/: full_ingestion_test.csv  non_matching_csv  sparse_ingestion_test.csv
server/NodeLibraries/deeplynx/test_files/timeseries2/: output_1000.csv
server/NodeLibraries/deeplynx/test_files/timeseries2/containers/1/datasources/1/: .gitignore  ten-entries.csv
server/deeplynx/: Cargo.toml  build.rs
server/deeplynx/configs/: build.yml  default.yml
server/deeplynx/src/: config.rs  errors.rs  main.rs
(+2424 files in other folders)
