[package]
name = "RedisLoader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.22.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json", "tls", "uuid" ] }
redis = { version = "0.22.1", features = ["tokio-native-tls-comp", "json"] }
serde = "1.0.148"
serde_json = "1.0.89"
futures-util = "0.3.25"
thiserror = "1.0.37"
chrono = "0.4.23"