[package]
edition = "2021"
name = "deeplynx-timeseries"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.7", default-features = false, features = ["napi4", "async", "tokio_rt", "chrono", "chrono_date", "serde", "serde_json"] }
napi-derive = "2.12.5"
tokio = {version = "1.27.0", features = ["full"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "bigdecimal", "migrate", "uuid" ,"macros", "chrono" , "json", "offline", "tls"] }
thiserror = "1.0.38"
include_dir = "0.7.3"
serde = "1.0.159"
serde_yaml = "0.9.19"
serde_json = "1.0.95"
chrono = {version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "fast-rng", "v4"] }
validator = { version = "0.16", features = ["derive"] }
rand = "0.8.5"
csv-async = {version = "1.2.6", features = ["tokio"] }
futures = "0.3.28"
serial_test = "2.0.0"
bytes = "1.4.0"
csv = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
