[package]
edition = "2021"
name = "deeplynx"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.2", default-features = false, features = ["napi4", "chrono", "tokio_rt", "async", "chrono_date", "serde", "serde_json", "tokio_io_util", "tokio_full"] }
napi-derive = "2.13.0"
sqlx = {version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "bigdecimal"]}
serde = {version = "1.0.183", features =["derive"]}
serde_json = "1.0.104"
tokio = {version = "1.31.0", features = ["full"] }
thiserror = "1.0.40"
redis = { version = "0.23.2", features = ["tokio-comp", "tokio-rustls-comp"] }
serde_yaml = "0.9.25"
csv-async = {version = "1.2.6", features = ["tokio", "tokio-stream"]}
futures = {version = "0.3.28", features = []}
futures-util = "0.3.28"
tokio-util = {version  = "0.7.8", features = ['compat'] }
serial_test = "2.0.0"
indexmap = "2.0.0"
include_dir = "0.7.3"
chrono = {version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "fast-rng", "v4"] }
validator = { version = "0.16", features = ["derive"] }
rand = "0.8.5"
bytes = "1.4.0"
csv = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
proc-macro2 = "1.0.60"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
