[package]
name = "dl-fast-load"
version = "0.1.0"
description = "This package is an add-on for DeepLynx which greatly speeds up timeseries data ingestion by utilizing Rust."
authors = ["John Darrington"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
