[package]
name = "dl-fast-load"
version = "0.1.0"
description = "This package is an add-on for DeepLynx which greatly speeds up timeseries data ingestion by utilizing Rust."
authors = ["John Darrington"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
once_cell = "1.15.0"
tokio = {version = "1.21.2", features = ["rt-multi-thread", "full"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"]}
chrono = "0.4.22"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api", "task-api"]
