[package]
name = "hdf5_extractor"
version = "0.1.0"
edition = '2021'
authors = ["Jake Swinford <Jake.swinford@inl.gov>", "Idaho National Laboratory"]
description = "Extracts metadata from.h5 files"

[lib]
name = "hdf5_extractor"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.0", features = ["serde","nif_version_2_16"] }
hdf5 = { package = "hdf5-metno", version = "0.9.0", features = ["static"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
