[package]
name = "deeplynx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.5", features = ["tracing"] }
config = { version = "^0.14.0", features = ["yaml", "json"] }
hyper = { version = "^1.2.0", features = ["full"] }
hyper-util = { version = "^0.1.3", features = ["full", "client-legacy"] }
serde = { version = "^1.0.197", features = ["derive"] }
thiserror = "^1.0.58"
tokio = { version = "^1.37.0", features = ["full"] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["json"] }
