[package]
name = "deeplynx"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.6", default-features = false, features = [
    "napi4",
    "chrono",
    "tokio_rt",
    "async",
    "chrono_date",
    "serde",
    "serde_json",
    "tokio_io_util",
    "tokio_full",
] }
napi-derive = "2.16.4"
sqlx = { version = "^0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "bigdecimal",
] }
serde = { version = "^1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full", "io-util"] }
thiserror = "1.0.61"
redis = { version = "0.25.3", features = ["tokio-comp", "tokio-rustls-comp"] }
serde_yaml = "0.9.25"
csv-async = { version = "1.3.0", features = ["tokio", "tokio-stream"] }
futures = { version = "0.3.30", features = [] }
futures-util = "0.3.30"
tokio-util = { version = "0.7.11", features = ['compat', "io-util", "io"] }
serial_test = "3.1.1"
indexmap = "2.2.6"
include_dir = "0.7.3"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "fast-rng", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
rand = "0.9.0-alpha.1"
bytes = "1.6.0"
csv = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
proc-macro2 = "1.0.83"
sha2 = "0.9.9"
base64 = { version = "0.22.1", features = ["default", "std"] }
polars = { version = "0.40.0", features = [
    "strings",
    "performant",
    "lazy",
    "sql",
    "streaming",
    "temporal",
    "object",
    "cse",
    "serde",
    "serde-lazy",
    "dynamic_group_by",
    "partition_by",
    "rows",
    "is_between",
    "list_to_struct",
    "list_eval",
    "cov",
] }
polars-arrow = { version = "0.40.0", features = ["arrow_rs"] }
arrow = { version = "51.0.0" }
reqwest = { version = "0.11.13", features = [
    "stream",
    "multipart",
    "json",
    "blocking",
] }
object_store = { version = "0.7.1", features = ["azure", "cloud"] }
lazy_static = "1.5.0"
url = "2.5.2"
datafusion = { version = "32.0.0" }
warp = "0.3.6"
env_logger = "0.10.1"
log = "0.4.20"
futures-executor = "0.3.29"
regex = "1.10.2"
async-trait = "*"
arrow-cast = "47.0.0"
parquet = "47.0.0"
anstyle = "1.0.6"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
