[package]
name = "deeplynx"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.16", default-features = false, features = [
    "napi4",
    "chrono",
    "tokio_rt",
    "async",
    "chrono_date",
    "serde",
    "serde_json",
    "tokio_io_util",
    "tokio_full",
] }
napi-derive = "2.16.4"
sqlx = { version = "^0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "bigdecimal",
] }
serde = { version = "^1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full", "io-util"] }
thiserror = "1.0.61"
redis = { version = "0.25.3", features = ["tokio-comp", "tokio-rustls-comp"] }
serde_yaml = "0.9.25"
csv-async = { version = "1.3.0", features = ["tokio", "tokio-stream"] }
futures = { version = "0.3.30", features = [] }
futures-util = "0.3.30"
tokio-util = { version = "0.7.11", features = ['compat', "io-util", "io"] }
indexmap = "2.2.6"
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
csv = "1.3.0"
sha2 = "0.9.9"
base64 = { version = "0.22.1", features = ["default", "std"] }
polars = { version = "0.46.0", features = [
    "strings",
    "lazy",
    "sql",
] }
arrow = { version = "55.2.0" }
object_store = { version = "0.12.2", features = ["azure"] }
url = "2.5.2"
datafusion = { version = "48.0.0" }
short-uuid = "0.1.2"
dotenvy = "0.15.7"
connection-string = "0.2.0"
azure_storage_blobs = "0.20.0"
azure_storage = "0.20.0"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true